--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.4",
     "querystring": "^0.2.0",
     "request": "^2.88.0",
+    "request-promise-native": "^1.0.7",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
