--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "npm run-script build && node lib/app.js"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "config": "^3.1.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
