--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "querystring": "^0.2.0",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7",
+    "requestretry": "^4.0.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "eslint": "^5.16.0"
   }
